--- a/.env.example
+++ b/.env.example
@@ -12,12 +12,7 @@ JWT_SECRET=your_jwt_secret_here
 # ===============================
 # BANCO PRINCIPAL (USUÁRIOS / AUTH)
 # ===============================
-DB_TYPE=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=your_db_user
-DB_PASS=your_db_password
-DB_NAME=comissoes_db
+DB_TYPE=mysql DB_HOST=localhost DB_PORT=3306 DB_USER=root DB_PASS=root DB_NAME=comissoes_db
 
 # ===============================
 # BANCO LEGADO (READ ONLY)
